tools/crates/vendor/toml_edit-0.19.15/tests/fixtures/invalid/table/array-implicit.stderr
TOML parse error at line 13, column 1
   |
13 | [[albums]]
   | ^
invalid table header
duplicate key `albums` in document root
